July 10, 1999
  - arrow.cc updated from GNED (enhancement: default value of anchors are now 50%)
  - widgets.tcl updated from GNED
  - modinsp2.tcl: removed potential sources of division by zero
  - fixed a problem in printptr() [tklib.cc] which caused a crash on Sun
  - now demands at least Tcl/Tk 8.0 patchlevel 1
July 11-13, 1999
  - icons.tcl added; textual toolbar icons replaced with graphics icons
  - note: because the name of each inspector window is unique,
    the help_tips() array grows monotonously as one opens new and new
    inspector windows. The array is NOT cleaned up after closing an insp.
    window. In everyday use this small memory leak cannot be a problem.
  - TO DO: spaces to be added between icons
  - widgets.tcl edited --> copy it to other subdirs
July 17, 1999
  - modinsp2.tcl: fixed bug in animdelay calibration
  - fixed a bug with inspector type selection in Inspect|By pattern matching..
Aug 2, 1999
  - OMNETPP_BITMAP_PATH turned into real path (a list of directories). The
    separator char is ";" on Windows, and ":" or ";" on Unix.
Aug 7, 1999
  - "inspect network", "inspect FES" buttons added to main toolbar
Aug 13, 1999
  - default width of connection arrows changed from 2 to 1 pixels to be
    consistent with GNED
Aug 30, 1999
  - bugfix on the toolbar of graphical gate inspector
Sept 5, 1999
  - main window renamed from ".omnetpp" to "."; now modal dialogs cannot go
    behind the main window (including the big red "STOP!" dialog).
------ omnetpp-2.0b2 released ------
Oct 12, 1999
  - bugfix in balloon.tcl
Dec 4,1999
  - compiled with MSVC. Minor changes: changed int to bool in some places.
    tkenv.dsp added. NOTE: one has to rename all .cc files  to .cpp
    for compiling (ren *.cc *.cpp)!
Dec 5,1999
  - Makefile.vc added
  - prints a banner line into main window before calling finish() on modules
    TBD: should print it into per-module windows too
Jan 9,2000
  - small modification to TOmnetTkApp's constructor