@@ -59,6 +59,7 @@ extern OmnetTclCommand tcl_commands[];
 
 extern int exit_omnetpp;
 
-int initTk(int argc, char **argv, Tcl_Interp *&interp );
+Tcl_Interp *initTk(int argc, char **argv);
 int createTkCommands( Tcl_Interp *interp, OmnetTclCommand *tcl_commands );
 int runTk( Tcl_Interp *interp );
+
